--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $footer-color;
+  font-size: 18px;
   text-align: center;
   left: 0;
   right: 0;
