--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -14,10 +14,9 @@ $text-color: #666;
 $text-color-light: #bbb;
 $heading-color-light: #fff;
 $body-color: #eee;
-$body-color-dark: #444;
+$body-color-dark: #434950;
 $shadow-color: rgba(0, 0, 0, 0.15);
 $highlight-color: #7a74de;
-$footer-color: #222;
 
 // Text
 $fonts: 'Lato', serif;
