--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -4,6 +4,7 @@
     background-color: #fff;
     box-shadow: 0 15px 30px $shadow-color;
     overflow: hidden;
+    color: $text-color;
   }
 
   .project-image {
